@@ -39,9 +39,9 @@
         <maven.compiler.compilerVersion>21</maven.compiler.compilerVersion>
 
         <netty.version>4.1.96.Final</netty.version>
-        <springboot.version>3.2.0</springboot.version>
-        <springcloud.version>2023.0.0</springcloud.version>
-        <springframework.version>6.1.1</springframework.version>
+        <springboot.version>3.3.0</springboot.version>
+        <springcloud.version>2023.0.1</springcloud.version>
+        <springframework.version>6.1.8</springframework.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <resilience4jVersion>2.0.2</resilience4jVersion>
         <jackson.version>2.15.1</jackson.version>
@@ -53,6 +53,12 @@
         <snappy.version>1.1.7</snappy.version>
         <dropwizard.version>3.2.5</dropwizard.version>
         <logback.version>1.4.7</logback.version>
+        <junit_jupiter_version>5.9.3</junit_jupiter_version>
+        <junit_version>4.13.2</junit_version>
+        <awaitility_version>4.2.0</awaitility_version>
+        <hamcrest_version>2.2</hamcrest_version>
+        <cglib_version>2.2.2</cglib_version>
+        <mockito_version>4.11.0</mockito_version>
     </properties>
 
     <dependencies>
@@ -101,6 +107,61 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <!--JUnit Jupiter Engine to depend on the JUnit5 engine and JUnit 5 API -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit_jupiter_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit_jupiter_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit_jupiter_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit_jupiter_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>${mockito_version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
@@ -1343,6 +1404,8 @@
                         <arg>jdk.base/java.lang=ALL-UNNAMED</arg>
                         <arg>--add-exports</arg>
                         <arg>jdk.base/java.math=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <!--                            <path>-->
